// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCell td default props renders a table tbody row element 1`] = `
<Table
  scrollableNotice={
    <Alert
      className="ds-u-margin-y--1 ds-u-font-size--small ds-u-font-weight--normal"
      headingLevel="3"
      role="status"
    >
      <p
        className="ds-c-alert__text"
      >
        Scroll using arrow keys to see more
      </p>
    </Alert>
  }
  stackableBreakpoint="sm"
>
  <div>
    <table
      className="ds-c-table"
      role="table"
    >
      <TableBody
        key=".0"
      >
        <tbody>
          <TableRow>
            <tr
              role="row"
            >
              <TableCell
                align="left"
                component="th"
              >
                <th
                  className="ds-u-text-align--left"
                  role="rowheader"
                  scope="row"
                >
                  Cell a
                </th>
              </TableCell>
              <TableCell
                align="left"
              >
                <td
                  className="ds-u-text-align--left"
                  role="cell"
                  scope="row"
                >
                  Cell b
                </td>
              </TableCell>
            </tr>
          </TableRow>
        </tbody>
      </TableBody>
    </table>
  </div>
</Table>
`;

exports[`TableCell th default props renders a table thead <th> element 1`] = `
<Table
  scrollableNotice={
    <Alert
      className="ds-u-margin-y--1 ds-u-font-size--small ds-u-font-weight--normal"
      headingLevel="3"
      role="status"
    >
      <p
        className="ds-c-alert__text"
      >
        Scroll using arrow keys to see more
      </p>
    </Alert>
  }
  stackableBreakpoint="sm"
>
  <div>
    <table
      className="ds-c-table"
      role="table"
    >
      <TableHead
        key=".0"
      >
        <thead>
          <TableRow
            _isTableHeadChild={true}
            key=".0"
          >
            <tr
              role="row"
            >
              <TableCell
                _isTableHeadChild={true}
                align="left"
                key=".0"
              >
                <th
                  className="ds-u-text-align--left"
                  role="columnheader"
                  scope="col"
                >
                  Column a
                </th>
              </TableCell>
              <TableCell
                _isTableHeadChild={true}
                align="left"
                key=".1"
              >
                <th
                  className="ds-u-text-align--left"
                  role="columnheader"
                  scope="col"
                >
                  Column b
                </th>
              </TableCell>
            </tr>
          </TableRow>
        </thead>
      </TableHead>
    </table>
  </div>
</Table>
`;
